# KinderBoys

./: .gitignore  CMakeLists.txt  LICENSE  README.md
L8_Project_Scene_Transitions_handout/ProjectI.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ProjectI.lastbuildstate
L8_Project_Scene_Transitions_handout/Source/: Animation.h  Application.h  Enemy.cpp  Enemy.h  Globals.h  Module.cpp  Module.h  ModuleAudio.cpp  ModuleEnemies.h  ModuleFadeToBlack.h  ModuleParticles.cpp  ModuleParticles.h  ModulePlayer.cpp  ModulePlayer.h  ModuleRender.cpp  ModuleRender.h  ModuleTextures.cpp  ModuleWindow.cpp  Particle.h  Path.h  ProjectI.vcxproj.filters  SceneIntro.cpp  SceneIntro.h  SceneLevel1.cpp  SceneLevel1.h
Super Smash Tv/Source/: Animation.h  Application.cpp  Application.h  BOSS.cpp  BOSS.h  Collider.h  Enemy.cpp  Enemy_BrownShip.cpp  Enemy_BrownShip.h  Enemy_Mech.cpp  Enemy_Mech.h  Lose.cpp  (+42 more)
docs/: index.md
src/: Animation.h  Application.cpp  Application.h  Collider.cpp  Collider.h  Enemy.cpp  Enemy_BrownShip.cpp  Enemy_BrownShip.h  Enemy_RedBird.cpp  Enemy_Turret2.cpp  Enemy_Turret2.h  Globals.cpp  Globals.h  Main.cpp  MemLeaks.h  Module.cpp  ModuleAudio.cpp  ModuleAudio.h  ModuleBOSS.cpp  ModuleBOSS.h  ModuleCollisions.cpp  ModuleEnemies.cpp  ModuleFadeToBlack.cpp  ModuleFadeToBlack.h  ModuleInput.cpp  ModuleInput.h  ModuleParticles.cpp  ModuleParticles.h  ModulePlayer.cpp  ModulePlayer.h  ModuleRender.cpp  ModuleRender.h  ModuleTextures.cpp  ModuleWindow.cpp  ModuleWindow.h  Point.h  ProjectI.vcxproj.filters  SceneIntro.cpp  SceneIntroGame.cpp  SceneLevel1.cpp  (+5 more)
